# vwire-python

./: LICENSE  README.md
examples/: 01_basic_send.py  02_receive_commands.py  03_timer_example.py  04_weather_station.py  05_smart_home.py  06_raspberry_pi_gpio.py  07_http_api.py  08_data_logger.py  09_alarm_notifications.py  __init__.py  minimal_alarm.py
vwire/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.py  core.py  http_client.py  pyproject.toml  requirements.txt  setup.py  timer.py  utils.py
